# qssm-rs

./: .gitignore  CONCRETE_128_REDUCTION_FREEZE.md  CONCRETE_256_REDUCTION_FREEZE.md  CONTRIBUTING.md  Cargo.toml  LEGAL.md  README.md  SECURITY.md  all_errors.txt  build.rs  ci_errors.txt  ci_log.txt  how-to.md  metadata_before.json  metadata_final.json  migration_manifest.json  prover_package.json
crates/mssq-batcher/: Cargo.toml
crates/mssq-batcher/src/: error.rs  leader.rs  lib.rs  merit.rs  state.rs
crates/mssq-batcher/src/dag/: mod.rs
crates/mssq-batcher/src/roles/: leader.rs  mod.rs  sequencer.rs
crates/mssq-batcher/src/state/: mod.rs  (+1 more)
crates/mssq-batcher/tests/: leader_adversarial.rs  mock_rollup.rs  sorting_integrity.rs  state_conflict.rs
crates/mssq-net/: Cargo.toml
crates/mssq-net/examples/: mssq_node.rs
crates/mssq-net/src/: behaviour.rs  discovery.rs  error.rs  lib.rs  node.rs  pulse.rs  relay.rs  reputation.rs  transport.rs
crates/mssq-net/tests/: pulse_validation.rs  swarm_smoke.rs  windows_build.rs
crates/qssm-examples/: Cargo.toml
crates/qssm-examples/src/: millionaires_duel.rs  verify.rs
crates/qssm-examples/tests/: millionaires_duel.rs
crates/qssm-gadget/: Cargo.toml  prover_package.json  r1cs_merkle_parent.manifest.txt  sovereign_witness.json
crates/qssm-gadget/assets/: sovereign_witness.json
crates/qssm-gadget/examples/: l2_handshake.rs
crates/qssm-gadget/src/: binding.rs  bits.rs  blake3_compress.rs  blake3_native.rs  entropy.rs  lattice_bridge.rs  lib.rs  merkle.rs  predicate.rs  prover_json.rs  r1cs.rs  template.rs
crates/qssm-gadget/tests/: full_merkle_parent_parity.rs  l2_polyops_package.rs  ms_merkle_roundtrip.rs  property_tests.rs  sovereign_digest_golden.rs
crates/qssm-he/: Cargo.toml
crates/qssm-he/src/: error.rs  harvest.rs  harvest_gate.rs  lib.rs  sensor.rs  windows_tsc.rs
crates/qssm-integration/: Cargo.toml
crates/qssm-integration/tests/: adversarial_replay.rs
crates/qssm-kaspa/: Cargo.toml
crates/qssm-kaspa/src/: anchor.rs  lib.rs  sink.rs
crates/qssm-le/: Cargo.toml
crates/qssm-le/fuzz/: Cargo.toml
crates/qssm-le/src/: commit.rs  crs.rs  error.rs  lib.rs  ntt.rs  params.rs  ring.rs
crates/qssm-le/tests/: adversarial_lattice.rs  cross_domain.rs  lab_tests.rs
crates/qssm-proofs/: Cargo.toml
crates/qssm-proofs/src/: benchmarks.rs  lib.rs  reduction_blake3.rs  reduction_lattice.rs
crates/qssm-wrapper/: Cargo.toml
crates/qssm-wrapper/src/: lib.rs
desktop/src-tauri/: .mssq-net-peer-cache.json  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
integration/: Cargo.toml  adversarial_replay.rs  test_entropy.rs  test_negative.rs  test_roundtrip.rs  test_serialization.rs  test_template_resolution.rs
integration/e2e-node-flow/: Cargo.toml
integration/e2e-node-flow/unit_tests/: adversarial_replay.rs
integration/l1-dag/l1-sync-tests/: Cargo.toml
integration/l2-rollup/mempool-overflow-test/: Cargo.toml
integration/zk-examples/src/: lib.rs  millionaires_duel.rs  verify.rs
integration/zk-examples/unit_tests/: millionaires_duel.rs
integration/zk-stack/zk-benchmarks/: Cargo.toml
l2-rollup/mssq-batcher/: Cargo.toml
l2-rollup/mssq-batcher/src/: lib.rs
l2-rollup/mssq-batcher/unit_tests/: leader_adversarial.rs  mock_rollup.rs  sorting_integrity.rs  state_conflict.rs
l2-rollup/mssq-sovereign/: Cargo.toml
l2-rollup/mssq-sovereign/src/: checkpoint.rs  law_materialization.rs  lib.rs  package_builder.rs  prover_package.rs  store.rs  stream.rs
shared-libs/p2p-net/: Cargo.toml
shared-libs/p2p-net/examples/: mssq_node.rs
shared-libs/p2p-net/unit_tests/: pulse_validation.rs  swarm_smoke.rs  windows_build.rs
shared-libs/sovereign-types/: Cargo.toml
shared-libs/sovereign-types/src/: lib.rs
truth-engine/api/: Cargo.toml  FREEZE.md  SECURITY_CHECKLIST.md
truth-engine/api/src/: context.rs  entropy.rs  error.rs  lib.rs  prove.rs  verify.rs  wire.rs
truth-engine/examples/: Cargo.toml
truth-engine/examples/src/: lib.rs
truth-engine/local-verifier/: Cargo.toml  FREEZE.md  SECURITY_CHECKLIST.md
truth-engine/local-verifier/src/: lib.rs  ms_verifier.rs
truth-engine/qssm-api/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-api/src/: commit_impl.rs  context.rs  error.rs  lib.rs  verify.rs  wire.rs
truth-engine/qssm-api/tests/: api_surface.rs
truth-engine/qssm-cli/: Cargo.toml  README.md
truth-engine/qssm-cli/src/: main.rs
truth-engine/qssm-core/: Cargo.toml  README.md
truth-engine/qssm-core/src/: lib.rs  wasm.rs
truth-engine/qssm-entropy/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-entropy/src/: error.rs  lib.rs
truth-engine/qssm-gadget/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-gadget/benches/: gadget_benches.rs
truth-engine/qssm-gadget/src/: error.rs  lib.rs  merkle.rs
truth-engine/qssm-gadget/unit_tests/: adversarial_expanded_tests.rs  backend_conformance_tests.rs  engine_b_binding_tests.rs  entropy_adversarial_tests.rs  full_merkle_parent_parity.rs  merkle_adversarial_tests.rs  ms_merkle_roundtrip.rs  ms_v2_bridge_tests.rs  property_tests.rs  sovereign_digest_golden.rs
truth-engine/qssm-le/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-le/src/: error.rs  lib.rs
truth-engine/qssm-le/unit_tests/: adversarial_lattice.rs  cross_domain.rs  lab_tests.rs
truth-engine/qssm-local-prover/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-local-prover/src/: context.rs  lib.rs  prove.rs  wire.rs
truth-engine/qssm-local-verifier/: Cargo.toml  FREEZE.md  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-local-verifier/src/: lib.rs
truth-engine/qssm-ms/: Cargo.toml  FREEZE.md  LICENSE  README.md  SECURITY_CHECKLIST.md
truth-engine/qssm-ms/fuzz/: Cargo.toml
truth-engine/qssm-ms/src/: error.rs  lib.rs  transcript.rs  v2.rs
truth-engine/qssm-ms/unit_tests/: mirror_shift_adversarial.rs  predicate_only_v2_adversarial.rs
(+725 files in other folders)
