[workspace]
members = [
    # Existing crates (will be migrated phase by phase)
    "shared-libs/qssm-traits",
    "zk-stack/predicate_engine/qssm-wrapper",
    "shared-libs/utils",
    "zk-stack/predicate_engine/qssm-gadget",
    "zk-stack/predicate_engine/qssm-le",
    "zk-stack/predicate_engine/qssm-ms",
    "l2-rollup/mssq-batcher",
    "zk-stack/qssm-examples",
    "shared-libs/kaspa",
    "l1-dag/entropy_engine",
    "shared-libs/p2p-net",
    "l1-dag/governor",
    "zk-stack/predicate_engine/qssm-proofs",
    "integration/e2e-node-flow",
    "desktop/src-tauri",

    # ZK stack
    "zk-stack/predicate_engine",
    "zk-stack/template_lib",
    "zk-stack/local_verifier",
    "zk-stack/api",

    # L1 DAG
    "l1-dag/dag",
    "l1-dag/consensus",
    "l1-dag/mempool",
    "l1-dag/miner",
    "l1-dag/state_machine",
    "l1-dag/networking",
    "l1-dag/node_api",

    # L2 Rollup
    "l2-rollup/dag",
    "l2-rollup/state_machine",
    "l2-rollup/sequencer",
    "l2-rollup/mempool",
    "l2-rollup/anchor",
    "l2-rollup/networking",

    # Shared libs
    "shared-libs/crypto",
    "shared-libs/qssm-traits",
    "shared-libs/identity-dag",

    # Integration
    "integration/l1-dag/l1-sync-tests",
    "integration/zk-stack/zk-benchmarks",
    "integration/l2-rollup/mempool-overflow-test",
    "integration/e2e-node-flow",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
crossterm = "0.28"
futures = "0.3"
libp2p = "0.56"
libp2p-noise = "0.46"
libp2p-yamux = "0.47"
ratatui = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
argon2 = "0.5"
blake3 = "1.5"
accelerometer = "0.12"
hex = "0.4"
openentropy-core = "0.12"
rayon = "1.10"
smallvec = "1.13"
ml-dsa = "0.1.0-rc.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
ureq = { version = "2.10", features = ["json"] }
maxminddb = "0.24"

# Internal workspace crates
qssm-utils = { path = "shared-libs/utils" }
qssm-traits = { path = "shared-libs/qssm-traits" }
qssm-le = { path = "zk-stack/predicate_engine/qssm-le" }
qssm-ms = { path = "zk-stack/predicate_engine/qssm-ms" }
qssm-gadget = { path = "zk-stack/predicate_engine/qssm-gadget" }
qssm-wrapper = { path = "zk-stack/predicate_engine/qssm-wrapper" }
qssm-proofs = { path = "zk-stack/predicate_engine/qssm-proofs" }
qssm-he = { path = "l1-dag/entropy_engine" }
qssm-kaspa = { path = "shared-libs/kaspa" }
governor = { path = "l1-dag/governor" }
mssq-batcher = { path = "l2-rollup/mssq-batcher" }
p2p-net = { path = "shared-libs/p2p-net" }
qssm-examples = { path = "zk-stack/qssm-examples" }
e2e-node-flow = { path = "integration/e2e-node-flow" }

[profile.dev]
split-debuginfo = "unpacked"
