[workspace]
members = [
    # Truth Engine (standalone, no network I/O)
    "truth-engine/qssm-utils",
    "truth-engine/qssm-entropy",
    "truth-engine/qssm-gadget",
    "truth-engine/qssm-le",
    "truth-engine/qssm-ms",
    "truth-engine/qssm-proofs",
    "truth-engine/qssm-local-prover",
    "truth-engine/qssm-templates",
    "truth-engine/qssm-local-verifier",
    "truth-engine/qssm-api",
    "truth-engine/examples",

    # Integration
    "integration",

    # Desktop (needs refactoring — kept for now)
    "desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BUSL-1.1"
categories = ["cryptography", "zero-knowledge", "security"]

[workspace.dependencies]
# External — truth-engine + shared-libs
argon2 = "0.5"
blake3 = "1.5"
accelerometer = "0.12"
hex = "0.4"
openentropy-core = "0.12"
rayon = "1.10"
smallvec = "1.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

# External — desktop (refactor later)
crossterm = "0.28"
futures = "0.3"
libp2p = "0.56"
libp2p-noise = "0.46"
libp2p-yamux = "0.47"
ratatui = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
ureq = { version = "2.10", features = ["json"] }
maxminddb = "0.24"

# Internal workspace crates
qssm-utils = { path = "truth-engine/qssm-utils" }
qssm-entropy = { path = "truth-engine/qssm-entropy" }
qssm-le = { path = "truth-engine/qssm-le" }
qssm-ms = { path = "truth-engine/qssm-ms" }
qssm-gadget = { path = "truth-engine/qssm-gadget", version = "=1.1.0" }
qssm-proofs = { path = "truth-engine/qssm-proofs" }
qssm-local-prover = { path = "truth-engine/qssm-local-prover", version = "=1.0.0" }
qssm-api = { path = "truth-engine/qssm-api" }
qssm-templates = { path = "truth-engine/qssm-templates" }
qssm-local-verifier = { path = "truth-engine/qssm-local-verifier" }

[profile.dev]
split-debuginfo = "unpacked"
