[package]
name = "mssq-batcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MSSQ rollup clerk: sequencing, PQ-friendly leader lottery, and state accumulator."

[dependencies]
ml-dsa.workspace = true
qssm-common = { path = "../qssm-common" }
qssm-utils = { path = "../qssm-utils" }
thiserror.workspace = true

[dev-dependencies]
qssm-kaspa = { path = "../qssm-kaspa" }
qssm-examples = { path = "../qssm-examples" }
qssm-le = { path = "../qssm-le" }
qssm-ms = { path = "../qssm-ms" }
