[package]
name = "mssq-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "All-in-one libp2p MSSQ swarm: transport, mesh intelligence, heartbeat gossip, and node dashboard."
publish = false

[features]
default = []
dashboard = ["dep:crossterm", "dep:ratatui"]

[lib]
name = "mssq_net"
path = "src/lib.rs"

[[example]]
name = "mssq_node"
path = "examples/mssq_node.rs"
required-features = ["dashboard"]
test = false
bench = false

[dependencies]
futures.workspace = true
libp2p = { version = "0.56", default-features = false, features = [
    "tokio",
    "dns",
    "tcp",
    "noise",
    "yamux",
    "quic",
    "websocket",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "ping",
    "relay",
    "autonat",
    "dcutr",
    "macros",
] }
libp2p-noise.workspace = true
libp2p-yamux.workspace = true
qssm-he = { path = "../qssm-he" }
qssm-le = { path = "../qssm-le" }
qssm-governor = { path = "../qssm-governor" }
qssm-utils = { path = "../qssm-utils" }
qssm-common = { path = "../qssm-common" }
mssq-batcher = { path = "../mssq-batcher" }
qssm-gadget = { path = "../qssm-gadget" }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
