[package]
name = "qssm-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
hex.workspace = true
ml-dsa.workspace = true
mssq-batcher = { path = "../mssq-batcher" }
qssm-common = { path = "../qssm-common" }
qssm-kaspa = { path = "../qssm-kaspa" }
qssm-le = { path = "../qssm-le" }
qssm-utils = { path = "../qssm-utils" }
