[package]
name = "qssm-gadget"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "BLAKE3–lattice gadgets: degree-2 bit witnesses and MS Merkle helpers (QSSM integration)."

[dependencies]
qssm-utils = { path = "../qssm-utils" }
thiserror.workspace = true

[dev-dependencies]
blake3.workspace = true
qssm-le = { path = "../qssm-le" }
qssm-ms = { path = "../qssm-ms" }
