[package]
name = "qssm-gadget"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "BLAKE3–lattice gadgets: degree-2 bit witnesses and MS Merkle helpers (QSSM integration)."

[features]
default = []
lattice-bridge = ["dep:qssm-le"]
ms-engine-b = ["dep:qssm-ms"]

[dependencies]
hex.workspace = true
qssm-le = { path = "../qssm-le", optional = true }
qssm-ms = { path = "../qssm-ms", optional = true }
qssm-utils = { path = "../qssm-utils" }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
blake3.workspace = true
qssm-le = { path = "../qssm-le" }
qssm-ms = { path = "../qssm-ms" }
qssm-wrapper = { path = "../qssm-wrapper" }
proptest = "1.6"
tempfile = "3"
