[package]
name = "qssm-integration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cross-crate adversarial integration tests for QSSM protocol boundaries."

[dependencies]
qssm-le = { path = "../qssm-le" }
qssm-utils = { path = "../qssm-utils" }

[dev-dependencies]
qssm-ms = { path = "../qssm-ms" }
