[package]
name = "qssm-kaspa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Kaspa L1 gRPC anchor (stub); enable feature kaspa-grpc for tonic client."

[dependencies]
qssm-common = { path = "../qssm-common" }

[features]
default = []
kaspa-grpc = ["dep:tonic"]

[dependencies.tonic]
version = "0.12"
optional = true
