[package]
name = "qssm-proofs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Formal invariants, reductions, and hardness gates for QSSM Engine A/B binding."

[dependencies]
qssm-gadget = { path = "../qssm-gadget" }
qssm-le = { path = "../qssm-le" }
qssm-utils = { path = "../qssm-utils" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
