[package]
name = "qssm-wrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Canonical StepEnvelope + accumulator wrapper for QSSM hybrid proverless chaining."

[dependencies]
blake3.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_jcs = "0.1.0"
qssm-gadget = { path = "../qssm-gadget" }
qssm-utils = { path = "../qssm-utils" }

[dev-dependencies]
tempfile = "3"
