[package]
name = "qssm-desktop"
version = "0.1.0"
description = "Tauri desktop template lab for the QSSM truth engine"
authors = ["QSSM"]
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "qssm_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde_json = { workspace = true }
hex = { workspace = true }
qssm-api = { workspace = true }
qssm-templates = { workspace = true }
