[package]
name = "e2e-node-flow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cross-crate adversarial integration tests for QSSM protocol boundaries."

[dependencies]
qssm-le.workspace = true
qssm-utils.workspace = true

[dev-dependencies]
qssm-ms.workspace = true

[[test]]
name = "adversarial_replay"
path = "unit_tests/adversarial_replay.rs"
