[package]
name = "mssq-batcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MSSQ rollup clerk: sequencing, PQ-friendly leader lottery, and state accumulator."

[dependencies]
ml-dsa.workspace = true
qssm-traits.workspace = true
qssm-utils.workspace = true
thiserror.workspace = true

[dev-dependencies]
qssm-kaspa.workspace = true
qssm-examples.workspace = true
qssm-le.workspace = true
qssm-ms.workspace = true

[[test]]
name = "state_conflict"
path = "unit_tests/state_conflict.rs"

[[test]]
name = "sorting_integrity"
path = "unit_tests/sorting_integrity.rs"

[[test]]
name = "mock_rollup"
path = "unit_tests/mock_rollup.rs"

[[test]]
name = "leader_adversarial"
path = "unit_tests/leader_adversarial.rs"
