[package]
name = "p2p-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "All-in-one libp2p MSSQ swarm: transport, mesh intelligence, heartbeat gossip, and node dashboard."
publish = false

[features]
default = []
dashboard = ["dep:crossterm", "dep:ratatui"]

[lib]
name = "p2p_net"
path = "src/lib.rs"

[[example]]
name = "mssq_node"
path = "examples/mssq_node.rs"
required-features = ["dashboard"]
test = false
bench = false

[[test]]
name = "windows_build"
path = "unit_tests/windows_build.rs"

[[test]]
name = "swarm_smoke"
path = "unit_tests/swarm_smoke.rs"

[[test]]
name = "pulse_validation"
path = "unit_tests/pulse_validation.rs"

[dependencies]
futures.workspace = true
libp2p = { version = "0.56", default-features = false, features = [
    "tokio",
    "dns",
    "tcp",
    "noise",
    "yamux",
    "quic",
    "websocket",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "ping",
    "relay",
    "autonat",
    "dcutr",
    "macros",
] }
libp2p-noise.workspace = true
libp2p-yamux.workspace = true
qssm-he.workspace = true
qssm-le.workspace = true
governor.workspace = true
qssm-utils.workspace = true
qssm-traits.workspace = true
mssq-batcher.workspace = true
qssm-gadget.workspace = true
template-lib.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
