[package]
name = "sovereign-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Canonical versioned wire types for the QSSM sovereign handshake / proof bundle protocol."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
