[package]
name = "zk-api"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Stable QSSM SDK: prove, verify."

[dependencies]
qssm-le.workspace = true
qssm-ms.workspace = true
qssm-gadget.workspace = true
qssm-utils.workspace = true
template-lib = { path = "../template-lib" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
trybuild = "1"
