[package]
name = "zk-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
zk-api = { path = "../api" }
template-lib = { path = "../template-lib" }
qssm-he.workspace = true
qssm-utils = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tempfile = "3"

[[bin]]
name = "simple_proof"
path = "src/bin/simple_proof.rs"

[[bin]]
name = "age_gate"
path = "src/bin/age_gate.rs"
