[package]
name = "local-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Offline proof verification without network access."

[dependencies]
zk-api = { path = "../api" }
template-lib = { path = "../template-lib" }
qssm-gadget = { workspace = true }
qssm-ms.workspace = true
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
qssm-utils = { workspace = true }
