[package]
name = "qssm-api"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Stable QSSM SDK: shared types, wire format, verify."

[dependencies]
qssm-le.workspace = true
qssm-ms.workspace = true
qssm-gadget.workspace = true
qssm-templates = { path = "../qssm-templates" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
qssm-le.workspace = true
qssm-utils.workspace = true
trybuild = "1"
