[package]
name = "qssm-api"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QSSM Truth Engine façade: compile, commit, prove, verify, open."

[dependencies]
qssm-local-prover = { path = "../qssm-local-prover", version = "=2.0.0" }
qssm-local-verifier = { path = "../qssm-local-verifier", version = "=2.0.0" }
qssm-templates = { path = "../qssm-templates", version = "=1.0.0" }
qssm-entropy = { workspace = true }
qssm-utils.workspace = true
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
