[package]
name = "qssm-entropy"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Hardware-anchored raw entropy harvest, Heartbeat, and sovereign seed (to_seed)."
publish = false

[dependencies]
accelerometer.workspace = true
blake3.workspace = true
qssm-utils.workspace = true
smallvec.workspace = true
thiserror.workspace = true
zeroize = { version = "1.8", features = ["derive"] }
