[package]
name = "qssm-local-prover"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Deterministic prove pipeline for QSSM zero-knowledge proofs."
publish = false

[dependencies]
qssm-api = { path = "../qssm-api" }
qssm-gadget.workspace = true
qssm-le.workspace = true
qssm-ms.workspace = true
qssm-utils.workspace = true
qssm-templates = { path = "../qssm-templates" }
serde_json.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
hex.workspace = true
