[package]
name = "qssm-local-prover"
version = "2.0.0"
edition.workspace = true
license.workspace = true
description = "Layer 4 — deterministic prove pipeline for QSSM ZK proofs."
publish = false

[dependencies]
qssm-le.workspace = true
qssm-ms.workspace = true
qssm-gadget.workspace = true
qssm-utils.workspace = true
qssm-templates = { path = "../qssm-templates" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
qssm-utils.workspace = true
qssm-templates = { path = "../qssm-templates" }
serde_json.workspace = true
hex.workspace = true
