[package]
name = "qssm-local-verifier"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Offline proof verification without network access."

[dependencies]
qssm-api = { path = "../qssm-api" }
qssm-templates = { path = "../qssm-templates" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
qssm-local-prover = { path = "../qssm-local-prover" }
qssm-utils = { workspace = true }
