[package]
name = "qssm-local-verifier"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layer 5 — offline proof verification for QSSM ZK proofs."

[dependencies]
qssm-le.workspace = true
qssm-ms.workspace = true
qssm-gadget.workspace = true
qssm-utils.workspace = true
qssm-templates = { path = "../qssm-templates", version = "=1.0.0" }
qssm-local-prover = { path = "../qssm-local-prover", version = "=2.0.0" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
qssm-utils.workspace = true
qssm-templates = { path = "../qssm-templates", version = "=1.0.0" }
