[package]
name = "qssm-ms"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "QSSM-MS (Mirror-Shift) succinct predicate proofs."

[dependencies]
qssm-utils.workspace = true
thiserror.workspace = true

[[test]]
name = "mirror_shift_adversarial"
path = "unit_tests/mirror_shift_adversarial.rs"
