[package]
name = "qssm-ms"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QSSM-MS (Mirror-Shift) succinct predicate proofs."

[dependencies]
blake3.workspace = true
curve25519-dalek = "4.1"
qssm-utils.workspace = true
subtle = "2.6"
thiserror.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

[[test]]
name = "predicate_only_v2_adversarial"
path = "unit_tests/predicate_only_v2_adversarial.rs"
